# flikisdining-bot

./: .env.example  .gitignore  Cargo.toml  README.md  devenv.nix
src/: env.rs  flikisdining.rs  handler.rs  lunch.rs  main.rs  search.rs
