[package]
name = "lunchbotv2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.30"
dotenvy = "0.15.7"
once_cell = "1.18.0"
reqwest = { version = "0.11.20", features = ["json"] }
serde = "1.0.188"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "full"] }

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "chrono",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    
    # cache disabled, nothing to cache in this bot.
]
version = "0.11.6"
