[package]
name = "lunchbotv2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.30"
dotenvy = "0.15.7"
http-cache-quickcache = "0.8.0"
http-cache-reqwest = "0.15.0"
once_cell = "1.18.0"
regex = "1.9.5"
reqwest = { version = "0.12.12", features = ["json"] }
reqwest-middleware = "0.4.0"
serde = "1.0.188"
tantivy = "0.22"
thiserror = "2.0.11"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "full"] }

[dependencies.serenity]
default-features = false
features = ["builder", "chrono", "client", "gateway", "http", "model", "utils", "rustls_backend"]
version = "0.12.4"
